--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.5",
@@ -11,6 +12,7 @@
     "aos": "^2.3.4",
     "emailjs": "^4.0.1",
     "framer-motion": "^7.5.3",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
